--- a/pp5/index.html
+++ b/pp5/index.html
@@ -70,16 +70,16 @@
                 function save(){
 
                     let newCustomer = {
-                        Company: document.getElementById("company"),
-                        NIP: document.getElementById("nip"),
-                        City: document.getElementById("city"),
-                        Street: document.getElementById("street"),
-                        House: document.getElementById("house"),
-                        Apartment: document.getElementById("apartment"),
-                        Postcode: document.getElementById("postcode"),
-                        Industry: document.getElementById("industry"),
-                        Comments: document.getElementById("comments"),
-                        isActive: document.getElementById("isactive"),
+                        Company: document.getElementById("company").value,
+                        NIP: document.getElementById("nip").value,
+                        City: document.getElementById("city").value,
+                        Street: document.getElementById("street").value,
+                        House: document.getElementById("house").value,
+                        Apartment: document.getElementById("apartment").value,
+                        Postcode: document.getElementById("postcode").value,
+                        Industry: document.getElementById("industry").value,
+                        Comments: document.getElementById("comments").value,
+                        isActive: document.getElementById("isactive").value,
                     }
                     console.log(newCustomer);
                 };
